# google-cse

./: .gitignore  README.md  pyproject.toml
src/google_cse/: __init__.py  client.py  parameters.py  results.py
