[project]
name = "google-cse"
version = "0.1.1"
description = "Simple Google Custom Search Engine (CSE) wrapper."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache 2.0" }
authors = [
  { name="M Razif Rizqullah", email="razifrizqullah@gmail.com" }
]

dependencies = [
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/rizquuula/google-cse"
Source = "https://github.com/rizquuula/google-cse"
Issues = "https://github.com/rizquuula/google-cse/issues"

[tool.uv]
package-dir = "src"